# ghost_main

./: .dockerignore  .gitignore  CHAT_MODE_ANALYSIS.md  GHOST_SYSTEM_ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md  USAGE_TRACKING_IMPLEMENTATION.md  USAGE_TRACKING_QUICK_START.md  docker-compose.yml  ghostplan.txt  package-lock.json  package.json
.cursor/plans/: ghost_agent_engine_implementation_db149b78.plan.md  ghost_vs_moltbot_chatting_layer_62f3c5d9.plan.md  knowledge_base_capabilities_button.plan.md
admin/: DEPLOYMENT.md  README.md  nginx-ghost-admin.conf  nginx-ghost-api.conf  nginx-ghost-web.conf
admin/admin-api/: .env  .env.example  Cargo.toml  ecosystem.config.json
admin/admin-api/src/: auth.rs  config.rs  main.rs  state.rs
admin/admin-api/src/routes/: admin.rs  auth.rs  mod.rs  payments.rs  trial.rs
admin/admin-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docker/: .env.example  README.md
docs/: DEPLOY.md  LICENSING-AUTH-SUBSCRIPTION.md
ghost-channels/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
ghost-channels/src/: config.ts  dispatch.ts  entry.ts  gateway-client.ts  parse-ghost-command.ts  task-classifier.ts  types.ts
ghost-gateway/: README.md  package.json  tsconfig.json
ghost-gateway/src/: entry.ts  env.ts  index.ts
openwork/: .gitignore  AGENTS.md  LICENSE  MOTIVATIONS-PHILOSOPHY.md  README.md  STATS.md  design-agents.md  package.json  pnpm-lock.yaml
openwork/scripts/: stats.mjs
scribe/: .gitignore  MODULE.md
scribe/scribe/: .gitignore  AGENT_ARCHITECTURE.md  AGENT_ARTIFACTS_AND_LLM.md  ARCHITECTURE.md  index.html  (+5 more)
scribe/scribe/src-tauri/: CAPABILITY_DESIGN.md  Cargo.toml  EMBEDDING_SETUP.md  MOLTBOT_EMBEDDING_INSIGHTS.md  build.rs  env.example  intent_prototypes.json  tauri.conf.json  testing.txt
scribe/scribe/src-tauri/capabilities/: cross-platform.json  default.json
scribe/scribe/src-tauri/icons/: icon.icns
scribe/scribe/src-tauri/src/: activate.rs  api.rs  capture.rs  lib.rs  screen_context.rs  shortcuts.rs  window.rs
scribe/scribe/src-tauri/src/agent/: mod.rs
scribe/scribe/src-tauri/src/agent/capabilities/: mod.rs  registry.rs
scribe/scribe/src-tauri/src/agent/capabilities/code/: apply_patch.rs  mod.rs  modify_block.rs  search.rs
scribe/scribe/src-tauri/src/agent/capabilities/docker/: build.rs  mod.rs  run.rs  stop.rs
scribe/scribe/src-tauri/src/agent/capabilities/env/: log_tail.rs  mod.rs  read.rs  set.rs
scribe/scribe/src-tauri/src/agent/capabilities/filesystem/: delete.rs  exists.rs  list.rs  mkdir.rs  mod.rs  move_.rs  read.rs  write.rs
scribe/scribe/src-tauri/src/agent/capabilities/http/: get.rs  mod.rs  post.rs
scribe/scribe/src-tauri/src/agent/capabilities/process/: kill.rs  list.rs  mod.rs  port_kill.rs  spawn.rs
scribe/scribe/src-tauri/src/agent/capabilities/project/: build.rs  install_dependencies.rs  mod.rs  run_dev_server.rs  test.rs
scribe/scribe/src-tauri/src/agent/capabilities/repo/: clone.rs  commit.rs  diff.rs  mod.rs  push.rs
scribe/scribe/src-tauri/src/agent/events/: event.rs  mod.rs
scribe/scribe/src-tauri/src/agent/execution_ticket/: mod.rs  schema.rs  store.rs
scribe/scribe/src-tauri/src/agent/executor/: failure.rs  mod.rs
scribe/scribe/src-tauri/src/agent/intent/: canonicalizer.rs  mod.rs
scribe/scribe/src-tauri/src/agent/llm/: mod.rs  ollama.rs
scribe/scribe/src-tauri/src/agent/loop/: run_loop.rs
scribe/scribe/src-tauri/src/agent/memory/: artifacts.rs
scribe/scribe/src-tauri/src/agent/permissions/: auto_approval.rs  mod.rs  permission.rs
scribe/scribe/src-tauri/src/agent/planner/: context.rs  context_builder.rs  decision.rs  mod.rs  prompt.rs  validate.rs
scribe/scribe/src-tauri/src/agent/router/: embedding.rs  exec.rs  intent_embeddings.rs  mod.rs  parse.rs  route.rs  types.rs
scribe/scribe/src-tauri/src/agent/run/: store.rs
scribe/scribe/src-tauri/src/agent/state/: belief_state.rs  confidence.rs  mod.rs  plan_revision.rs  run_state.rs
scribe/scribe/src-tauri/src/agent/tools/: fs_read.rs  fs_write.rs  mod.rs
scribe/scribe/src-tauri/src/assistant/: audit.rs  commands.rs  mod.rs
scribe/scribe/src-tauri/src/assistant/planner/: verifier.rs
scribe/scribe/src-tauri/src/db/: main.rs
scribe/scribe/src-tauri/src/db/migrations/: agent-runs.sql  conversation-memory.sql  conversation-metadata.sql  execution-tickets.sql
scripts/: setup-db.sh
(+187 files in other folders)
