[package]
name = "ghost"
version = "0.1.7"
license = "GPL-3.0"
edition = "2021"

[features]
# embedding-router: intent routing via HTTP API calls to backend embedding service (cross-platform).
default = ["embedding-router"]
embedding-router = []

# See more keys and definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ghost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }
dotenv = "0.15"

[dependencies]
tauri = { version = "2.5.2", features = ["macos-private-api"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-http = "2.5.2"
tauri-plugin-websocket = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-keychain = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.6"
xcap = "0.0.12"
base64 = "0.22"
cpal = "0.15.3"
hound = "3.5.1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7" }
once_cell = "1.19.0"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dotenv = "0.15"
futures-util = "0.3"
anyhow = "1.0"
tracing = "0.1"
ringbuf = "0.4.8"
tauri-plugin-shell = "2.3.1"
tauri-plugin-dialog = "2.4"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tauri-plugin-posthog = "0.2.4"
tauri-plugin-machine-uid = "0.1.2"
tauri-plugin-updater = "2"
regex = "1.10"
walkdir = "2.5"
jsonwebtoken = "9.2"
sha2 = "0.10"
tempfile = "3.8"
chrono = "0.4"
dirs = "5.0"
async-trait = "0.1"
ndarray = "0.16"
active-win-pos-rs = "0.9"
[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-macos-permissions = "2"
cidre = "0.11.3"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.19.0"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.30.1"
libpulse-simple-binding = "2.29.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.0"
